configurando el button y el textares

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		</section>
 
 		<section>
-			<textarea class="mensaje" id="" cols="20" rows="10"></textarea>
+			<textarea class="mensaje" id="texto" cols="20" rows="10"></textarea>
 			<div>
-				<button class="copiar">copiar</button>
+				<button class="copiar" onclick="copiar()">copiar</button>
 			</div>
 		</section>
 	</main>
